# pc-dynamic-island

./: .gitignore  README.md  ai_prompt.html  ai_with_streaming.py  echo.py  games.json  index.html  instructions.json  main.js  package-lock.json  package.json  prompts.json  renderer.js  rendererAi.js  rendererExpanded.js  seen_notifications.json  test.py
assets/styles/: dynamic-ai.css  island.css  main.css
native/notification_bridge/: CMakeLists.txt  main.cpp
src/assets/styles/: ai.css  island.css
src/main/: devConsole.js  index.js  ipc.js  notifications.js  windows.js
src/renderer/ai/: index.html  index.js
src/renderer/devConsole/: index.html  index.js
src/renderer/island/: index.html  index.js
src/shared/: utils.js
tools/: conversation.py  time.py
